external-crates/move/move-compiler/tests/move_check/warning_suppression/unknown_warning.exp
error[E10003]: invalid attribute value
  ┌─ tests/move_check/warning_suppression/unknown_warning.move:3:3
  │
3 │ #[allow(who_am_i)]
  │   ^^^^^^^^^^^^^^^ Unknown warning filter 'who_am_i'

