external-crates/move/move-compiler/tests/move_check/warning_suppression/unknown_warning.move
// tests a unknown warning

#[allow(who_am_i)]
module 0x42::m {
}
